--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,6 +29,15 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="title-bar">
+      <div class="title-bar__drag"></div>
+      <div class="title-bar__item" id="mini_btn">
+        <img src="%PUBLIC_URL%/icons/minus-24.png" title="최소화" />
+      </div>
+      <div class="title-bar__item" id="close_btn">
+        <img src="%PUBLIC_URL%/icons/close-24.png" title="종료" />
+      </div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +49,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="%PUBLIC_URL%/index.js" ></script>
   </body>
 </html>
